--- a/ImageClassify.ipynb
+++ b/ImageClassify.ipynb
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aug = get_dataset_aug(aug_list, save=True)"
+    "ds = get_total()"
    ]
   },
   {
@@ -32,7 +32,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from model import Inception\n",
+    "m = Inception(2)"
+   ]
   }
  ],
  "metadata": {
