--- a/dealwithlabels.ipynb
+++ b/dealwithlabels.ipynb
@@ -44,8 +44,8 @@
    "source": [
     "import random\n",
     "import os\n",
-    "trainval_percent = 0.95  # 训练和验证集所占比例，剩下的0.1就是测试集的比例\n",
-    "train_percent = 0.9  # 训练集所占比例，可自己进行调整\n",
+    "trainval_percent = 0.95\n",
+    "train_percent = 0.9\n",
     "total_xml = os.listdir('train_label')\n",
     "\n",
     "num = len(total_xml)\n",
