--- a/ImageClassify.ipynb
+++ b/ImageClassify.ipynb
@@ -6,16 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataset import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_list, aug_list = get_data_list()"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegressionCV, LogisticRegression"
    ]
   },
   {
@@ -24,7 +17,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = get_total()"
+    "data = pd.read_csv('data/textprocess.csv')\n",
+    "ref_data = pd.read_csv('output/infer.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = ref_data[['GlobalID','1']].groupby(by='GlobalID').max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['image'] = data['Lab Status'].map({'Positive ID':1.0, 'Negative ID':0.0, }, na_action=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.0    2069\n",
+       "1.0      14\n",
+       "Name: image, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "data['image'].value_counts()"
    ]
   },
   {
@@ -32,10 +66,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from model import Inception\n",
-    "m = Inception(2)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
