--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -13,52 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data/textprocess.csv')\n",
-    "ref_data = pd.read_csv('output/infer.csv', index_col=0)"
+    "data = pd.read_csv('data/dataset2.csv', index_col='GlobalID')\n",
+    "ds = ds[ds.label>-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged = ref_data[['GlobalID','1']].groupby(by='GlobalID').max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['image'] = data['Lab Status'].map({'Positive ID':1.0, 'Negative ID':0.0, }, na_action=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.0    2069\n",
-       "1.0      14\n",
-       "Name: image, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
-   "source": [
-    "data['image'].value_counts()"
+    "from imblearn.over_sampling import BorderlineSMOTE, ADASYN\n",
+    "Xb, yb = BorderlineSMOTE(n_jobs=-1, random_state=97).fit_resample(X, y)\n",
+    "Xa, ya = ADASYN(n_jobs=-1, random_state=97s"
    ]
   },
   {
